--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,14 @@ export(abnorm_rm)
 export(boxcox_lam)
 export(dark_kable)
 export(lazy_bar)
+export(lazy_contrasts)
 export(lazy_hist)
 export(lazy_interact)
 export(lazy_pirate)
+export(lazy_post_plot)
+export(lazy_post_ratio)
 export(lazy_qqnorm)
+export(lazy_smooth_plot)
 export(pca_resid_stats)
 export(reg_assume)
 export(t_effect_size)
