update to contrast function - simplify functionality so it only does levels() and attr().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(abnorm_rm)
 export(boxcox_lam)
 export(dark_kable)
 export(lazy_bar)
-export(lazy_contrasts)
+export(lazy_contrast_info)
 export(lazy_hist)
 export(lazy_interact)
 export(lazy_pirate)
